server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
